src/objects/TimeTable__c.object
<CustomObject>
    <description>Time Tables for different classes and Divisions</description>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Class for which this timetable valids</description>
        <inlineHelpText>Class for which this timetable valids</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>TimeTables</relationshipLabel>
        <relationshipName>TimeTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <description>Days of the week</description>
        <inlineHelpText>Days of the week</inlineHelpText>
        <label>Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division for which this timetable valids</description>
        <inlineHelpText>Division for which this timetable valids</inlineHelpText>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>TimeTables</relationshipLabel>
        <relationshipName>TimeTables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndTime1__c</fullName>
        <description>Endtime for Slot1</description>
        <inlineHelpText>Endtime for Slot1</inlineHelpText>
        <label>EndTime1</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndTime2__c</fullName>
        <description>Endtime for Slot2</description>
        <inlineHelpText>Endtime for Slot2</inlineHelpText>
        <label>EndTime2</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndTime3__c</fullName>
        <description>EndTime for Slot3</description>
        <inlineHelpText>EndTime for Slot3</inlineHelpText>
        <label>EndTime3</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartTime1__c</fullName>
        <description>Start time for first slot</description>
        <inlineHelpText>Start time for first slot</inlineHelpText>
        <label>StartTime1</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartTime2__c</fullName>
        <label>StartTime2</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartTime3__c</fullName>
        <description>Startime for the slot 3</description>
        <inlineHelpText>Startime for the slot 3</inlineHelpText>
        <label>StartTime3</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subject for Slot1</description>
        <inlineHelpText>Subject for Slot1</inlineHelpText>
        <label>Subject1</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipLabel>TimeTables</relationshipLabel>
        <relationshipName>TimeTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subject for Slot2</description>
        <inlineHelpText>Subject for Slot2</inlineHelpText>
        <label>Subject2</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipLabel>TimeTables (Subject2)</relationshipLabel>
        <relationshipName>TimeTables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subject for Slot3</description>
        <inlineHelpText>Subject for Slot3</inlineHelpText>
        <label>Subject3</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipLabel>TimeTables (Subject3)</relationshipLabel>
        <relationshipName>TimeTables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the subject teeacher</description>
        <inlineHelpText>Name of the subject teeacher</inlineHelpText>
        <label>Teacher1</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>TimeTables</relationshipLabel>
        <relationshipName>TimeTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Teacher for slot 2</description>
        <inlineHelpText>Teacher for slot 2</inlineHelpText>
        <label>Teacher2</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>TimeTables (Teacher2)</relationshipLabel>
        <relationshipName>TimeTables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Teacher for slot 3</description>
        <inlineHelpText>Teacher for slot 3</inlineHelpText>
        <label>Teacher3</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>TimeTables (Teacher3)</relationshipLabel>
        <relationshipName>TimeTables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TimeTable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TimeTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>